<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context="com.example.android.scorekeeper.MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Team A"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="54sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="sixPointsTeamA"
                    android:text="@string/button_touchDown" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="onePointTeamA"
                    android:text="@string/button_extraPoint" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="twoPointsTeamA"
                    android:text="@string/button_twoPoint" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="threePointsTeamA"
                    android:text="@string/button_fieldGoals" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="twoPointsTeamA"
                    android:text="@string/button_safeties" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context="com.example.android.scorekeeper.MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Team B"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textSize="54sp"
                    android:textStyle="" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="sixPointsTeamB"
                    android:text="@string/button_touchDown" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="onePointTeamB"
                    android:text="@string/button_extraPoint" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:onClick="twoPointsTeamB"
                    android:text="@string/button_twoPoint" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="threePointsTeamB"
                    android:text="@string/button_fieldGoals" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:clickable="true"
                    android:onClick="twoPointsTeamB"
                    android:text="@string/button_safeties" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:onClick="resetScore"
            android:paddingTop="16dp"
            android:text="@string/button_reset" />
    </RelativeLayout>
</ScrollView>

